test/files/neg/sensitive.check
sensitive.scala:17: error: constructor Sensitive in class Sensitive cannot be accessed in object Attacker
  val y = new Sensitive()
          ^
one error found
